<?xml version="1.0" encoding="utf-8"?>

<!--
Title
Banner Image
Status
Network (label)
Rating (label)
First Air Date (label)
Seasons
    Episodes

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stranger_things"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/strangerthings_wallpaper" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_status"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/continuing" />

        <TextView
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/netflix" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/rating"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tv_14"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/first_air_date"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/date"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/seasons"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/season_1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Chapter One: The Vanishing of Will Byers"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Chapter Two: The Weirdo on Maple Street"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Chapter Three: Holly, Jolly"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Chapter Four: The Body"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Chapter Five: The Flea and the Acrobat"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Chapter Six: The Monster"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Chapter Seven: The Bathtub"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Chapter Eight: The Upside Down"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
